2009-07-28  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Admin.aspx: Add support for running deletion directives
	manually.

2009-07-28  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* ViewHtmlReport.aspx.cs: Update according to CreateWebServiceDownloadUrl
	changes, and don't download and resend when we can just redirect.

	* GetFile.aspx.cs: Redirect instead of downloading
	and resending.

2009-07-23  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Admin.aspx[.cs]: Added support for starting the scheduler
	from the web page.

	* MonkeyWrench.Web.UI.csproj: Updated.

2009-07-23  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Login.aspx.cs: Assume all errors are because of invalid
	user/pass.

2009-07-23  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* GetFile.aspx.cs:
	* ViewHtmlReport.aspx.cs: If an error occurred while downloading
	something, redirect to the login page.

2009-07-23  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Makefile: Make publish and install targets synonyms.

2009-07-23  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Master.master.cs: Make the login instance, not static.

2009-07-16  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* ViewHtmlReport.aspx.cs: Fix a few typos.

2009-07-16  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* ViewHtmlReport.aspx.cs: Clean up after ourselves.

2009-07-16  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* ViewHtmlReport.aspx.cs: Don't rewrite javascript code.

2009-07-16  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* ViewHtmlReport.aspx.cs: Fix boolean logic.

2009-07-14  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* DownloadLatestFile.aspx:
	* DownloadLatestFile.aspx.cs:
	* DownloadLatestFile.aspx.designer.cs: Added. Support for downloading
	the latest file a lane has produced. 

2009-06-09  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* GetRevisionLog.aspx.cs: Use new API to automatically
	decompress logs and diffs upon download.

2009-06-04  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* GetRevisionLog.aspx.designer.cs: Regenerated.