@@ -1,5 +1,9 @@
 2009-07-28  Rolf Bjarne Kvinge  <RKvinge@novell.com>
 
+	* EditLaneHelp.html: Start writing some help for the EditLane page.
+
+2009-07-28  Rolf Bjarne Kvinge  <RKvinge@novell.com>
+
 	* index.html: We're called MonkeyWrench now.
 
 2009-07-23  Rolf Bjarne Kvinge  <RKvinge@novell.com>
